--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,7 @@
 # This is Git's per-user configuration file.
 [user]
+	name = antony
+	email = antonydorairaj12@gmail.com
 # Please adapt and uncomment the following lines:
 #	name = root
 #	email = root@ip-172-31-0-14.us-east-2.compute.internal
